  new
- reverted init sequence in that plugins are loaded *before* the theme is
  resolved; this gived plugins more power to influence the final theme
- allow plugins to access database (new method getDB())
- add ZMForwardView
- implement new setting 'isSkipSingleProductCategory'; Note: this is not
  active yet, as zen-cart's header.php will do the redirect...

Release 0.8.2
- product_notifications.php should not use $zm_account
- ZMProductSorter:sort(..) - check that the given list is an array
- added ZMView::isValid(..)
- add defines for 5 log level
- implemented missing view check in ZMController; the view key for missing
  pages can be configured with 'missingPageId'; default is 'error'
- resorted the boostrap order to allow bootstrap.php to use zenmagick defines
- convert all access to shared images (zen-cart/images) to using ZMImageInfo
- refactor all image related functions into three: zm_image(..),
  zm_image_uri(..) and zm_product_image_link(..)
- add new zm_imagehandler2 plugin
- fix invalid php in create_account_success
- add missing welcome_email.txt (#1752483) and make welcome email look nicer
- add 'storeOwner' setting
- fix wrong title of welcome HTML email
- make ZMCoreCompressor handle heredoc syntax correctly (#1752404)
- added new SQL patch to set up config groups for general and plugin settings
- make storefront use db persisted plugin status rather than loading all
  plugins every time
- cache plugin instances per request
- clean up ZMPlugin to make config and status handling simpler
- make ZMPlugin extend ZMObject rather than ZMService
- allow plugins to execute SQL patches
- added CAPTCHA plugin
- make email validation case insensitive (#1756658)
- make zm_ajax_href use whatever protocol is used for the current request
  (effectively, this will make it switch to SSL for HTTPS requests and vice
  versa) (#1756689)
- added Lightbox JS example to the demo theme (works with ImageHandler2 too!)
- change zm_absolute_href again