@@ -57,16 +57,17 @@ a.btn {line-height:1.8em;padding:2px 4px 3px 4px;}
 input.mod, a.mod {color:white;background-color:#65329d;}
 input.del, a.del {color:white;background-color:#fe0202;}
 
+#info {border-bottom:1px solid gray;padding:4px;}
 /* sec nav */
-#secnav ul {list-style:none;padding:0;margin:0;}
+#secnav ul {list-style:none;padding:0;margin:0;margin-left:20px;}
 #secnav a {font-weight:bold;color:green;text-decoration: none;}
 #secnav li li a {display:block;font-weight:normal;color:#060;padding:0.2em 4px;}
 #secnav li li a:hover {text-decoration:underline;}
-#secnav li {float:left;position:relative;x-width:10em;padding:4px 5px;text-align:left;cursor:default;background-color:#f7f7f7;border:solid gray;border-width:0 1px 1px;}
+#secnav li {float:left;position:relative;padding:4px 5px;text-align:left;cursor:default;background-color:#f7f7f7;border:solid gray;border-width:0 1px 1px;}
 #secnav li li {width:12em;padding:1px 5px;}
-#secnav li ul {display:none;position:absolute;top:100%;left:0;font-weight:normal;border:solid 1px #7d6340;}
-#secnav li>ul {top:auto;left:auto;}
-#secnav li li {display:block;float:none;xbackground-color:transparent;border:none;}
+#secnav li ul {display:none;position:absolute;top:99%;left:0;font-weight:normal;border:solid 1px #7d6340;}
+#secnav li li {display:block;float:none;background-color:#eee;border:none;}
+#secnav li li.first {border:none;}
 #secnav li:hover ul, #secnav li.over ul {display:block;z-index:1;}
 
 /* simple horizontal nav */
