@@ -82,6 +82,7 @@ Release 0.8.3
 - add ZMForwardView
 - implement new setting 'isSkipSingleProductCategory'; Note: this is not
   active yet, as zen-cart's header.php will do the redirect...
+- reworked the dynamic admin patch and code
 
 Release 0.8.2
 - product_notifications.php should not use $zm_account
